--------------------------------------------------------------------------------
MZK 2023-02-18 12:03:13-08:00

1. gh-614: Restored Viewer type-to-search feature which was removed in 6099.
   Now it is implemented as a macro, see View.TypeToSearch.lua.
   Thanks to all for the discussion and prototyping.

· · · · · · · · · · · · · · · · · · · · · · · · ·

1. gh-614: Восстановил функциональность Просмотрщика печатать-чтобы-искать,
   которая была удалена в 6099. Теперь это делается при помощи макроса,
   см. View.TypeToSearch.lua. Спасибо всем за обсуждение и прототипирование.

--------------------------------------------------------------------------------
drkns 2023-02-14 21:56:31+00:00 - build 6103

1. A few fixes.

--------------------------------------------------------------------------------
drkns 2023-02-12 00:38:45+00:00 - build 6102

1. Refactoring.

2. More tests.

3. Warnings.

--------------------------------------------------------------------------------
drkns 2023-02-06 22:08:52+00:00 - build 6101

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-02-05 13:01:34+00:00 - build 6100

1. gh-483: Do not update panel curdir too early. Experimental.

2. Refactoring.

3. More logging.

--------------------------------------------------------------------------------
MZK 2023-01-30 21:02:33-08:00 - build 6099

1. Viewer now uses the standard Search dialog.

2. Removed the following features:
   - Opening Viewer's Search dialog on typing the first character of the search pattern.
     See gh-614 for the discussion.
   - Search dialog auto-focus.

--------------------------------------------------------------------------------
rohitab 2023-01-30 01:17:44+11:00 - build 6098

1. gh-617: Allow history to be used with masked edit controls.

--------------------------------------------------------------------------------
MZK 2023-01-28 18:41:14-08:00
