@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+zg 2023-02-21 20:49:15+02:00 - build 6104
+
+1. experimental: new event SE_FOLDERCHANGED, sent when changing the current directory in panels.
+
+--------------------------------------------------------------------------------
 MZK 2023-02-18 12:03:13-08:00
 
 1. gh-614: Restored Viewer type-to-search feature which was removed in 6099.
